--- a/src/main/resources/templates/productshow.html
+++ b/src/main/resources/templates/productshow.html
@@ -10,13 +10,18 @@
 <div class="container">
     <!--/*/ <th:block th:include="fragments/header :: header"></th:block> /*/-->
 
-    <h2>Product Details</h2>
+    <h2>Product Details From Bob's store</h2>
         <div>
             <form class="form-horizontal">
                 <div class="form-group">
+                    <label class="col-sm-2 control-label">Database Id:</label>
+                    <div class="col-sm-10">
+                        <p class="form-control-static" th:text="${product.id}">Database Id</p></div>
+                </div>
+                <div class="form-group">
                     <label class="col-sm-2 control-label">Product Id:</label>
                     <div class="col-sm-10">
-                        <p class="form-control-static" th:text="${product.id}">Product Id</p></div>
+                        <p class="form-control-static" th:text="${product.productId}">Product Id</p></div>
                 </div>
                 <div class="form-group">
                     <label class="col-sm-2 control-label">Description:</label>
