Fixed refresh issue in the POM and resources folders.  Small HTML changes.

--- a/src/main/webapp/templates/index.html
+++ b/src/main/webapp/templates/index.html
@@ -11,5 +11,9 @@
 <div class="container">
     <!--/*/ <th:block th:include="fragments/header :: header"></th:block> /*/-->
 </div>
+    <div class="col-md-offset-2">
+        <h2>Press the button to view exercises, or click navigation bars above.</h2>
+        <button type="button" class="btn btn-primary">View Exercises</button>
+    </div>
 </body>
 </html>
