--- a/src/main/webapp/templates/fragments/header.html
+++ b/src/main/webapp/templates/fragments/header.html
@@ -31,15 +31,15 @@
 
         <div class="jumbotron">
             <div class="row text-center">
-                <div class="">
-                    <h2>Spring Framework Guru</h2>
+                <!--<div class="">-->
+                    <h2>Chet Kuhn's First</h2>
 
                     <h3>Spring Boot Web App</h3>
-                </div>
+                <!--</div>-->
             </div>
             <div class="row text-center">
-                <img src="../../static/images/NewBannerBOOTS_2.png" width="400"
-                     th:src="@{/images/NewBannerBOOTS_2.png}"/>
+                <img src="../../static/images/banner2.jpg" width="800"
+                     th:src="@{/images/banner2.jpg}"/>
             </div>
         </div>
     </div>
