solved h2 console issue, began transition to postgresql.

--- a/src/main/webapp/templates/fragments/header.html
+++ b/src/main/webapp/templates/fragments/header.html
@@ -31,11 +31,11 @@
 
         <div class="jumbotron">
             <div class="row text-center">
-                <!--<div class="">-->
+                <div class="">
                     <h2>Chet Kuhn's First</h2>
 
                     <h3>Spring Boot Web App</h3>
-                <!--</div>-->
+                </div>
             </div>
             <div class="row text-center">
                 <img src="../../static/images/banner2.jpg" width="800"
