--- a/src/main/webapp/templates/index.html
+++ b/src/main/webapp/templates/index.html
@@ -3,7 +3,7 @@
 <head lang="en">
 
     <title>Spring Framework Guru</title>
-
+<!--Why does this work-->
     <!--/*/ <th:block th:include="fragments/headerinc :: head"></th:block> /*/-->
 </head>
 <body>
